2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBWork_Extensions.cs:
	* DBLane_Extensions.cs:
	* DBHost_Extensions.cs:
	* DBFile_Extensions.cs:
	* DBLogin_Extensions.cs:
	* DBRecord_Extensions.cs:
	* DBPerson_Extensions.cs:
	* DBCommand_Extensions.cs:
	* DBLanefile_Extensions.cs:
	* DBLoginView_Extensions.cs:
	* DBWorkFileView_Extensions.cs:
	* DBRevisionWork_Extensions.cs:
	* DBLaneDependency_Extensions.cs:
	* DBRevisionWorkView_Extensions.cs:
	* DBEnvironmentVariable_Extensions.cs:
	* DBFileDeletionDirective_Extensions.cs:
	* DBLaneDeletionDirectiveView_Extensions.cs: Update according
	to DB API changes.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBRevisionWork_Extensions.cs: Add support for returning 
	all the work for a revisionwork entry.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBLogin_Extensions.cs: Use a static random generator to 
	try to avoid generating the same random value when requests
	come in simultaneously.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBLaneDeletionDirectiveView_Extensions.cs: Update according
	to API changes.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBRevisionWork_Extensions.cs: Only include work for one 
	sequence value at a time.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBWork_Extensions.cs: Propagate the extension correctly
	on file upload to set the mime type correctly.
